Fixed mobile button styling for Safari, Fixed spacing between title and print icon for mobile phones

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,6 +8,9 @@
   transition: all 1s;
   cursor: pointer;
   color: variables.$color-white;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
   &:hover {
     background-color: rgb(191, 190, 255);
