--- a/sass/components/_diagram.scss
+++ b/sass/components/_diagram.scss
@@ -1,58 +1,5 @@
 @use '../utils/variables';
 
-@media print {
-  .diagram-form {
-    display: none !important;
-  }
-  .icon-printer {
-    display: none !important;
-  }
-  .chord-name {
-    display: block;
-    border: none !important;
-    margin: 0 auto !important;
-  }
-  .chord-tools {
-    display: none !important;
-  }
-  .header__title {
-    border: none !important;
-  }
-  .chord-diagrams {
-    display: block !important;
-    padding: 0 3rem !important;
-    width: 100%;
-  }
-  .chord-fret {
-    border: none !important;
-
-    &--none {
-      opacity: 0;
-    }
-  }
-  .diagram-container {
-    page-break-inside: avoid;
-
-    display: inline-block !important;
-    margin: 0 1rem !important;
-  }
-
-  // .body {
-  //   display: block;
-  // }
-  .app {
-    margin: 0 !important;
-    padding: 0 !important;
-  }
-}
-
-@media only screen and (max-width: 770px) {
-  .app {
-    padding: 10rem 1rem !important;
-    width: 90% !important;
-  }
-}
-
 body {
   background-image: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
   display: flex;
