--- a/sass/style.css
+++ b/sass/style.css
@@ -1,30 +1,37 @@
-@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap';
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
 }
+
 html {
   box-sizing: border-box;
 }
+
 body {
   box-sizing: border-box;
 }
+
 .hidden {
   display: none;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   font-size: 1.6rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
+
 input {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
 }
+
 .btn {
   padding: 2rem;
   border: none;
@@ -32,7 +39,10 @@ input {
   background-color: #9089f0;
   transition: all 1s;
   cursor: pointer;
-  color: #fff;
+  color: white;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 .btn:hover {
   background-color: #bfbeff;
@@ -40,18 +50,19 @@ input {
 .btn:active {
   transform: scale(0.9);
 }
+
 .icon {
   width: 2rem;
   height: 2em;
   margin: 0 1rem;
   stroke-width: 0;
-  stroke: #000;
+  stroke: black;
   fill: rgba(0, 0, 0, 0.534);
   transition: fill 0.5s, transform 1s;
   cursor: pointer;
 }
 .icon:hover {
-  fill: #000;
+  fill: black;
 }
 .icon:active {
   transform: scale(0.9);
@@ -63,65 +74,23 @@ input {
   top: 0;
   width: 30px;
 }
-@media print {
-  .diagram-form {
-    display: none !important;
-  }
-  .icon-printer {
-    display: none !important;
-  }
-  .chord-name {
-    display: block;
-    border: none !important;
-    margin: 0 auto !important;
-  }
-  .chord-tools {
-    display: none !important;
-  }
-  .header__title {
-    border: none !important;
-  }
-  .chord-diagrams {
-    display: block !important;
-    padding: 0 3rem !important;
-    width: 100%;
-  }
-  .chord-fret {
-    border: none !important;
-  }
-  .chord-fret--none {
-    opacity: 0;
-  }
-  .diagram-container {
-    page-break-inside: avoid;
-    display: inline-block !important;
-    margin: 0 1rem !important;
-  }
-  .app {
-    margin: 0 !important;
-    padding: 0 !important;
-  }
-}
-@media only screen and (max-width: 770px) {
-  .app {
-    padding: 10rem 1rem !important;
-    width: 90% !important;
-  }
-}
+
 body {
   background-image: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .app {
   margin: 10rem 0;
   padding: 10rem;
   width: 100%;
   max-width: 80rem;
   border-radius: 1rem;
-  background-color: #fff;
+  background-color: white;
 }
+
 .chord-diagrams {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
@@ -131,6 +100,7 @@ body {
   -moz-column-gap: 1rem;
   column-gap: 1rem;
 }
+
 .diagram-form {
   min-height: 30rem;
   height: 100%;
@@ -149,6 +119,7 @@ body {
 .diagram-form label {
   margin-bottom: 2rem;
 }
+
 .diagram {
   width: 150px;
   position: relative;
@@ -159,6 +130,7 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
 .grid {
   height: 100%;
   width: 100%;
@@ -170,7 +142,7 @@ body {
   z-index: 1;
 }
 .grid__el > * {
-  border: 1px solid #000;
+  border: 1px solid black;
 }
 .grid__el--no-border {
   border: none !important;
@@ -179,8 +151,9 @@ body {
   border: none !important;
 }
 .grid > * {
-  border: 1px solid #000;
+  border: 1px solid black;
 }
+
 .note {
   height: 2rem;
   width: 2rem;
@@ -197,14 +170,15 @@ body {
   top: 0;
 }
 .note--fretted {
-  fill: #000;
+  fill: black;
   border: none;
 }
 .note--open {
-  stroke: #000;
+  stroke: black;
   stroke-width: 3rem;
   border: none;
 }
+
 .chord-name {
   height: 3rem;
   width: 10rem;
@@ -213,6 +187,7 @@ body {
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
+
 .num-strings,
 .num-frets {
   font-size: 2rem;
@@ -220,11 +195,13 @@ body {
   text-align: center;
   margin-bottom: 3rem;
 }
+
 .chord-tools {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .chord-fret {
   width: 20px;
   text-align: center;
@@ -234,6 +211,7 @@ body {
   left: -20px;
   z-index: 10;
 }
+
 .header {
   width: 100%;
   position: relative;
@@ -247,3 +225,64 @@ body {
   text-align: center;
   font-size: 3rem;
 }
+
+@media print {
+  .diagram-form {
+    display: none !important;
+  }
+
+  .icon-printer {
+    display: none !important;
+  }
+
+  .chord-name {
+    display: block;
+    border: none !important;
+    margin: 0 auto !important;
+  }
+
+  .chord-tools {
+    display: none !important;
+  }
+
+  .header__title {
+    border: none !important;
+  }
+
+  .chord-diagrams {
+    display: block !important;
+    padding: 0 3rem !important;
+    width: 100%;
+  }
+
+  .chord-fret {
+    border: none !important;
+  }
+  .chord-fret--none {
+    opacity: 0;
+  }
+
+  .diagram-container {
+    page-break-inside: avoid;
+    display: inline-block !important;
+    margin: 0 1rem !important;
+  }
+
+  .app {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+}
+@media only screen and (max-width: 770px) {
+  .app {
+    padding: 10rem 1rem !important;
+    width: 90% !important;
+  }
+
+  .header__title {
+    width: 80%;
+    margin-left: 0;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
